import java.util.ArrayList;

public abstract class Media {
    private String title;
    private int releaseYear;
    private double rating;
    private ArrayList<Category> categories;

    public String getTitle(){
        return title;
    }

    public int getReleaseYear() {
        return releaseYear;
    }

    public double getRating(){
        return rating;
    }

    public void addCategory(Category c){
    }

    public void play() {
    }
}
